# flycheck-haskell

./: .gitignore  .travis.yml  CHANGES.md  CHANGES.rst  Cask  Makefile  README.md  README.rst  flycheck-haskell.cabal  flycheck-haskell.el  get-cabal-configuration.hs  get-cabal-flags.hs  get-flags.hs  stack-7.10.yaml  stack-8.0.yaml  stack-8.2.yaml
.github/workflows/: ci.yml
helpers/: .gitignore  get-build-directories.hs  get-cabal-configuration.hs  get-dependencies.hs  get-extensions.hs  get-source-directories.hs
src/: main.hs
src/Flycheck/: PrintCabal.hs
test/: flycheck-haskell-test.el  test-helper.el
test/test-data/project-with-cabal-file/: flycheck-haskell-test.cabal
test/test-data/project-with-package-env/: .ghc.environment.x86_64-darwin-8.4.3  .ghc.environment.x86_64-linux-8.4.3  foo.cabal
test/test-data/project-with-package-env/dist-newstyle/packagedb/ghc-8.4.3/: flycheck-haskell-test-0.1.0.0-inplace.conf  package.cache
test/test-data/project-with-package-yaml/: package.yaml
test/test-data/project-with-prelude-module/: foo.cabal
