name:                flycheck-haskell
version:             0.1.0.0
synopsis:            Backend for Flycheck Haskell
homepage:            https://github.com/flycheck/flycheck-haskell
license:             GPL-3
license-file:        COPYING
author:              Sebastian Wiesner
maintainer:          lunaryorn@gmail.com
category:            Development
build-type:          Simple
cabal-version:       >=1.10

executable flycheck-haskell-print-cabal
  main-is:             main.hs
  other-modules:       Flycheck.CabalDump
  build-depends:       base >=4.6 && <4.7,
                       Cabal >=1.18 && <1.19,
                       bytestring >=0.10,
                       atto-lisp >=0.2
  hs-source-dirs:      src
  default-language:    Haskell2010
